--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@ locale                   : "en-US"
 title                    : "Héctor Tejero Cicuéndez"
 title_separator          : "-"
 name                     : &name "Héctor"
-description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : &description "Predoctoral researcher at Institute of Evolutionary Biology, Barcelona"
+url                      : https://cicuendez.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "cicuendez.github.io/"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -95,7 +95,7 @@ author:
   flickr           :
   facebook         : "https://www.facebook.com/hector.tejerocicuendez"
   foursquare       :
-  github           : "academicpages"
+  github           : "Cicuendez"
   google_plus      :
   keybase          :
   instagram        :
