--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Héctor"
-  avatar           : "profile.png"
+  avatar           : "profilehtc.png"
   bio              : "Evolutionary biologist, PhD student"
   location         : "Barcelona"
   employer         :
