--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ author:
   flickr           :
   facebook         : # "hector.tejerocicuendez"
   foursquare       :
-  github           : "Cicuendez"
+  github           : # "Cicuendez"
   google_plus      :
   keybase          :
   instagram        :
