--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Héctor"
   avatar           : "profilehtc.png"
-  bio              : "Evolutionary biologist, PhD student"
+  bio              : "Evolutionary biologist, \nPhD student"
   location         : "Barcelona"
   employer         :
   googlescholar    : # "http://yourfullgooglescholarurl.com"
