--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Héctor"
   avatar           : "profilehtc.png"
   bio              : |
-                     Evolutionary biologist
+                     Evolutionary biologist\n
                      PhD student
   location         : "Barcelona"
   employer         :
