--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Héctor"
   avatar           : "profilehtc.png"
   bio              : |
-                     Evolutionary biologist\n
-                     PhD student
+                      Evolutionary biologist
+                      PhD student
   location         : "Barcelona"
   employer         :
   googlescholar    : # "http://yourfullgooglescholarurl.com"
